--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,97 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary: #1b5bf7;
+  --primary-disabled: #84a0e7;
+  --secondary: #464359;
+  --dark: #18191f;
+  --opacity: rgba(255, 60, 0, 0.5686274509803921);
+  --background: #f4f7ff;
+  --font-color: #464359;
+  --bg-secondary: #e0e8ff;
+  --devops: #a8bfff;
+  --mobile: #dbe5ff;
+  --infrastructure: #d1dde8;
+  --frontend: #c6d6ff;
+  --design: #ced6ee;
+  --pm: #99b7df;
+  --testing: #e1e9fe;
+  --backend: #bddaed;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding: 0;
+  margin: 0;
+  font-family: Manrope, sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .active-scrollLink {
+    border-bottom: 2px solid var(--primary) !important;
+  }
+  .bg-primary {
+    background-color: var(--primary);
+  }
+  .bg-background {
+    background-color: var(--background);
+  }
+}
+
+.nav-dropdown {
+  display: none;
+}
+.nav-item:hover .nav-dropdown {
+  display: block;
+}
+.list-item {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  padding: 10px;
+  margin-top: 10px;
+  padding-left: 20px;
+  transition: 200ms ease-in-out;
+}
+.list-item:hover {
+  background-color: var(--primary);
+  color: #fff !important;
+}
+.scroll-container {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.scroll-content {
+  display: inline-block;
+  animation: scroll 10s linear infinite;
+}
+
+.scroll-item {
+  display: inline-block;
+  padding: 20px;
+  background-color: #f0f0f0;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
   }
 }
