--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,15 @@ body {
   margin: 0;
   font-family: Manrope, sans-serif;
 }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Manrope, sans-serif;
+}
 
 @layer utilities {
   .text-balance {
@@ -43,6 +52,9 @@ body {
   }
   .bg-primary {
     background-color: var(--primary);
+  }
+  .text-primary {
+    color: var(--primary);
   }
   .bg-background {
     background-color: var(--background);
